force-app/main/default/objects/Product__c/fields/Alternate_UOM__c.field-meta.xml
<CustomField>
    <fullName>Alternate_UOM__c</fullName>
    <label>Alternate UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>