force-app/main/default/objects/Product__c/fields/Bulk__c.field-meta.xml
<CustomField>
    <fullName>Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk</label>
    <type>Checkbox</type>
</CustomField>