force-app/main/default/objects/Product__c/fields/Crate_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Crate_Conversion__c</fullName>
    <label>Per Crate Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>