force-app/main/default/objects/Product__c/fields/DisplayURL__c.field-meta.xml
<CustomField>
    <fullName>DisplayURL__c</fullName>
    <label>Display URL</label>
    <type>Url</type>
</CustomField>