force-app/main/default/objects/Product__c/fields/Distributor_product__c.field-meta.xml
<CustomField>
    <fullName>Distributor_product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is true for distributors products</description>
    <label>Distributor product</label>
    <type>Checkbox</type>
</CustomField>