force-app/main/default/objects/Product__c/fields/Focus_Product__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Product</label>
    <type>Checkbox</type>
</CustomField>