force-app/main/default/objects/Product__c/fields/HSN__c.field-meta.xml
<CustomField>
    <fullName>HSN__c</fullName>
    <label>HSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>