force-app/main/default/objects/Product__c/fields/Image_Long__c.field-meta.xml
<CustomField>
    <fullName>Image_Long__c</fullName>
    <label>Image_Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>