force-app/main/default/objects/Product__c/fields/Per_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Per_Pieces__c</fullName>
    <label>Per Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>