force-app/main/default/objects/Product__c/fields/Price_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Type_Name__c</fullName>
    <label>Price Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>