force-app/main/default/objects/Product__c/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Group</label>
    <referenceTo>Pricing_Group__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>