force-app/main/default/objects/Product__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Product</label>
    <type>Checkbox</type>
</CustomField>