force-app/main/default/objects/Product__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>