force-app/main/default/objects/Product__c/fields/Rate_Currency__c.field-meta.xml
<CustomField>
    <fullName>Rate_Currency__c</fullName>
    <label>Rate Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>