force-app/main/default/objects/Product__c/fields/Rate_Value__c.field-meta.xml
<CustomField>
    <fullName>Rate_Value__c</fullName>
    <label>Rate Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>