force-app/main/default/objects/Product__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>