force-app/main/default/objects/Product__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <label>Release Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>