force-app/main/default/objects/Product__c/fields/Secondary_Product__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Secondary Product</label>
    <type>Checkbox</type>
</CustomField>