force-app/main/default/objects/Product__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>