force-app/main/default/objects/Product__c/fields/Under_SS__c.field-meta.xml
<CustomField>
    <fullName>Under_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under SS</label>
    <type>Checkbox</type>
</CustomField>