force-app/main/default/objects/Product__c/fields/UOM_Conversion__c.field-meta.xml
<CustomField>
    <fullName>UOM_Conversion__c</fullName>
    <label>UOM Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>