force-app/main/default/objects/Product__c/fields/Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_End_Date__c</fullName>
    <label>Validity End Date</label>
    <type>Date</type>
</CustomField>