force-app/main/default/objects/Product__c/fields/Validity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Start_Date__c</fullName>
    <label>Validity Start Date</label>
    <type>Date</type>
</CustomField>