force-app/main/default/objects/Product__c/fields/Volume_Per_UOM__c.field-meta.xml
<CustomField>
    <fullName>Volume_Per_UOM__c</fullName>
    <label>Volume Per UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>