force-app/main/default/objects/Product__c/recordTypes/Assets.recordType-meta.xml
<RecordType>
    <fullName>Assets</fullName>
    <active>true</active>
    <label>Assets</label>
</RecordType>