force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Brand__c</columns>
    <columns>Primary_Product__c</columns>
    <columns>Secondary_Product__c</columns>
    <columns>IsActive__c</columns>
    <columns>Image__c</columns>
    <columns>Rate_Value__c</columns>
    <columns>Distributor_product__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>