force-app/main/default/objects/Product__c/listViews/Asset_products.listView-meta.xml
<ListView>
    <fullName>Asset_products</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Make__c</columns>
    <columns>Model_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product__c.Assets</value>
    </filters>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Freezer products</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>