force-app/main/default/objects/Product__c/listViews/Secondary_Products.listView-meta.xml
<ListView>
    <fullName>Secondary_Products</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Secondary_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Secondary_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Secondary Products</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>